--- a/style.css
+++ b/style.css
@@ -83,6 +83,9 @@ background-color: rgb(178, 186, 184);
     .para{
         text-align:center ;
     }
+    img{
+       text-align: center; 
+    }
 }
     
     
